@@ -133,6 +133,9 @@
 /* Host has POSIX directory operations */
 #undef HOST_HAS_DIRECTORY_OPERATIONS
 
+/* Host has dirfd and fchdir */
+#undef HOST_HAS_DIRFD_FCHDIR
+
 /* Linux flavour */
 #undef LINUXplatform
 
