@@ -1,3 +1,8 @@
+2014-11-14  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* configure.ac, src/lib/cfuns-c.c: Try harder to use
+	host directory operations
+
 2014-11-08  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/algebra/files.spad, src/interp/nlib.lisp,
